@@ -1,3 +1,13 @@
+
+2009-12-14  Kevin B. Kenny  <kennykb@acm.org>
+
+	* library/demos/unicodeout.tcl: Added code to check for
+	right-to-left support on Windows and adjust Hebrew and Arabic
+	character strings accordingly. Changed the Hebrew string to
+	'ktb ebryt' (ktav Ivrit, "Hebrew writing") to be consistent
+	with at least the Greek and Russian strings. Thanks to
+	Rodrigo Readi for calling the inconsistency to our attention.
+	
 2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tkInt.decls:	[Bugs 220600, 220690]: Comment that
